crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_075_VRC1_Tetsuwan_Atom_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-075-VRC1/Tetsuwan Atom (Japan).zip
rom_sha256=7033067a5e592e982de3e6edc7b6f3dc00ccd9136cb18a919224ee220d7b4e0b
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=027a81d75daf0fe7
checkpoint f900 fb_fnv1a64=ec95a44e0cac257b
checkpoint f1100 fb_fnv1a64=ff2851c8274efeeb
