crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_076_Namcot3446_Digital_Devil_Monogatari_Megami_Tensei_J.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-076-Namcot3446/Digital Devil Monogatari - Megami Tensei (J) [!].nes
rom_sha256=89f2aa8aad69ff8551e5addc85ba67dd061141f37e8e3224adc2787c1a85a9a5
frames=1141
fb_bytes=245760
cycles=33949777
audio_samples=836505
audio_fnv1a64=186311cb79d49af9
checkpoint f900 fb_fnv1a64=a49c98f4c238a8ef
checkpoint f1100 fb_fnv1a64=a49c98f4c238a8ef
