crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_076_Namcot3446_Digital_Devil_Story_Megami_Tensei_Japan_Namcot_Collection.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-076-Namcot3446/Digital Devil Story - Megami Tensei (Japan) (Namcot Collection).nes
rom_sha256=0b5cbcce2b8630404b782437cb3847b2157478c1439509aa9ab70572a08579f1
frames=1141
fb_bytes=245760
cycles=33949777
audio_samples=836505
audio_fnv1a64=98672fc89810d6c3
checkpoint f900 fb_fnv1a64=a49c98f4c238a8ef
checkpoint f1100 fb_fnv1a64=a49c98f4c238a8ef
