crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_079_NINA003_006_AV_Mahjong_Club_Japan_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-079-NINA003-006/AV Mahjong Club (Japan) (Unl).zip
rom_sha256=25135119165764fd4549db405b3d2606d993e1df7812bfed983b6c600323ae9d
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=fb5d9ff90ac0fb95
checkpoint f900 fb_fnv1a64=e0cb2bb03ae7e1ec
checkpoint f1100 fb_fnv1a64=e0cb2bb03ae7e1ec
